# ec-gen

./: .coveragerc  .isort.cfg  AGENTS.md  CONTRIBUTING.md  GEMINI.md  README.md  benchmark-emk-termux.cast  coroutine-slides.md  environment.yml  mypy.ini  setup.cfg  setup.py
.github/workflows/: ci.yml  multi-platforms.bak  python-package.yml  pythonapp.bak
benches/: test_EMK.py  test_bm_EMK.py  test_bm_set_partition.py  test_bm_sjt.py  test_set_partition.py  test_sjt.py
cpp_ai/: .gitignore  CMakeLists.txt  README.md  simple_test.cpp  xmake.lua
cpp_ai/cmake/: ecgen-config.cmake.in
cpp_ai/examples/: combin_example.cpp  permutations_example.cpp
cpp_ai/include/ecgen/: combin.hpp  ecgen.hpp  ehr.hpp  gray_code.hpp  set_bipart.hpp  set_partition.hpp  sjt.hpp  skeleton.hpp
cpp_ai/src/: combin.cpp  ehr.cpp  gray_code.cpp  set_bipart.cpp  set_partition.cpp  sjt.cpp
cpp_ai/tests/: test_combin.cpp  test_ehr.cpp  test_gray_code.cpp  test_set_bipart.cpp  test_set_partition.cpp  test_sjt.cpp
docs/: conf.py  index.md
rust_ai/: Cargo.toml  README.md
rust_ai/examples/: basic.rs
rust_ai/src/: combin.rs  ehr.rs  gray_code.rs  lib.rs  set_bipart.rs  set_partition.rs  sjt.rs  skeleton.rs
rust_ai_iterator/: README.md
rust_ai_iterator/examples/: basic.rs
rust_ai_iterator/src/: combin.rs  ehr.rs  gray_code.rs  set_bipart.rs  set_partition.rs  sjt.rs  skeleton.rs
src/ec_gen/: __init__.py  combin.py  combin_old.py  ehr.py  gray_code.py  set_bipart.py  set_partition.py  set_partition_old.py  sjt.py  sjt_list.py  skeleton.py
tests/: conftest.py  test_combin.py  test_ehr.py  test_gray_code.py  test_gray_code_old.py  test_perm.py  test_set_bipart.py  test_set_partition.py  test_set_partition_old.py  test_sjt_list.py  test_skeleton.py
